updated CSS for word user input section to ensure the word takes up only one line on mobile devices.

--- a/style.css
+++ b/style.css
@@ -98,11 +98,13 @@ body {
 
 #user-input-section-word{
   font-size: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #user-input-section-word > * {
-  width: 1em;
-  display: inline-block;
+  width: 0.9em;
 }
 
 #user-input-section-chances {
